# home-event-rule-bridge

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bot-reply-issue.yml  config.yml  feature-idea.yml  setup-issue.yml
docs/: private-tester-guide.md  private-tester-invite.md
docs/smoke/: 2026-07-05-discord-dogfood.md
examples/: .env.example  eval-prompts.txt  smoke-prompts.txt
fixtures/: ha_states.json  ha_states_harbordock_lab.json
src/home_event_rule_bridge/: __init__.py  approval.py  audit.py  bridge.py  cli.py  compiler.py  config.py  discord_bot.py  ha.py  models.py  nsp.py  setup_portal.py  telegram.py  writer.py
tests/: test_config.py  test_discord_bot.py  test_public_surface.py  test_rule_bridge.py  test_setup_portal.py
