[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home-event-rule-bridge"
version = "0.1.0"
description = "Create Home Assistant rule drafts from IM messages, with local-first parsing and explicit approval."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bean-Harbor" }]
keywords = ["home-assistant", "telegram", "local-ai", "automation", "smart-home"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
home-rule-bridge = "home_event_rule_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

