[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home-event-rule-bridge"
version = "0.1.0"
description = "Draft Home Assistant automations from chat, with readable review and explicit approval."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bean-Harbor" }]
keywords = ["home-assistant", "discord", "telegram", "local-ai", "automation", "smart-home"]
dependencies = []

[project.optional-dependencies]
discord = ["discord.py>=2.7,<3"]
setup = ["segno>=1.6,<2"]
dev = ["pytest>=8"]

[project.scripts]
home-rule-bridge = "home_event_rule_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
